Подготовка к релизу JSSE